--- a/pages/chatGPT/1-tutorial-basics/scen/场景1：问答问题.md
+++ b/pages/chatGPT/1-tutorial-basics/scen/场景1：问答问题.md
@@ -11,7 +11,7 @@ sidebar_position: 0
 
 这个场景应该是使用 AI 产品最常见的方法。以 ChatGPT 为例，一般就是你提一个问题，ChatGPT 会给你答案，比如像这样：
 
-![Q&AExample.png](./assets/Q%26AExample.png)
+![que_example.png](./assets/que_example.png)
 
 在这个场景下，prompt 只要满足前面提到的基本原则，基本上就没有什么问题。但需要注意，不同的 AI 模型擅长的东西都不太一样，prompt 可能需要针对该模型进行微调。另外，目前的 AI 产品，也不是无所不能，有些问题你再怎么优化 prompt 它也没法回答你。以 ChatGPT 为例：
 
